@@ -1,3 +1,8 @@
+2021-05-06  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* elliptic.tcl: Correct the name of "dn" (ticket f46d2826b59f540296e76586570c86d07a4a5cec)
+	* special.tcl: Changed version of math::special to 0.5.1
+	* pkgIndex.tcl: Changed version of math::special to 0.5.1
+
 2021-03-14  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* decimal.tcl: Apply patch for fromstr, version 1.0.4 (ticket d159e101f329682a232aabac36c0ef6640ff8484)
 	* decimal.test: Added test for this ticket
